<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unitree_legged_sdk</name>
  <version>0.0.1</version>
  <description>Unitree legged SDK</description>
  <maintainer email="gennaro.raiola@gmail.com">graiola</maintainer>
  <author>Gennaro Raiola</author>

  <license>GNU General Public License v3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>

